[package]
name = "qoqo_calculator"
version = "0.1.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]

[lib]
name = "qoqo_calculator"
crate-type = ["rlib"]

[dependencies]
num-complex = "0.3"
serde = {version = '=1.0.123', features = ["derive"]}
thiserror = "1.0"

[dev-dependencies]
serde_test = "1.0.123"