[package]
name = "qoqo_calculator"
version = "0.1.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_calculator"
description = "qoqo-calculator is the calculator backend of the qoqo quantum computing toolkit by HQS Quantum Simulations"

[lib]
name = "qoqo_calculator"
crate-type = ["rlib"]

[dependencies]
autocfg = "=1.0.1"
num-complex = "=0.4.0"
num-traits = "=0.2.14"
proc-macro2 = "=1.0.24"
quote = "=1.0.9"
serde = { version = '=1.0.124', features = ["derive"] }
syn = "=1.0.60"
thiserror = "=1.0"
unicode-xid = "=0.2.1"

[dev-dependencies]
serde_test = "=1.0.124"
