[package]
name = "qoqo_calculator"
version = "1.6.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.76"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_calculator"
description = "qoqo-calculator is the calculator backend of the qoqo quantum computing toolkit by HQS Quantum Simulations"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "qoqo_calculator"
crate-type = ["rlib"]

[dependencies]
num-complex = { version = "0.4", features = ['serde'] }
serde = { version = '1.0', features = ["derive"] }
thiserror = "2.0"
schemars = { version = "0.8", optional = true }


[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[features]
default = []
json_schema = ["schemars"]
