[package]
name = "qoqo_calculator_pyo3"
version = "0.5.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo_calculator_pyo3"
description = "Python interface to qoqo calculator, the calculator backend of the qoqo quantum computing toolkit by HQS Quantum Simulations"
exclude = ["tests*", "python_tests*", ".cargo*", "*.code-workspace"]

[lib]
name = "qoqo_calculator_pyo3"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"
qoqo_calculator = {version="0.5", path="../qoqo_calculator"}
# Dependencies listed in exact version
serde =  "1.0"
thiserror = "1.0"

[dependencies.pyo3]
version = "0.15"
features = ["num-complex"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"] 

[package.metadata.maturin]
maintainer = "HQS Quantum Simulations GmbH"
maintainer-email = "info@quantumsimulations.de"
requires-python = ">=3.6"
