[project]
name = "qoqo_calculator_pyo3"
license = {text="Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016"}
maintainers = [{name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de"}]
requires-python = ">=3.7"

[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

