[project]
name = "qoqo_calculator_pyo3"
version = "1.3.1"
license = { text = "Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016" }
authors = [
    { name = "HQS Quantum Simulation GmbH", email = "info@quantumsimulations.de" },
]
maintainers = [
    { name = "Matteo Lodi", email = "matteo.lodi@quantumsimulations.de" },
]
requires-python = ">=3.8"

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
skip-auditwheel = false
strip = true
profile = "release"

[project.optional-dependencies]
docs = [
    "sphinx >= 2.1",
    "nbsphinx",
    "pygments",
    "recommonmark",
    "myst_parser",
    "sphinx_rtd_theme",
    "tomli",
    "numpy",
]
